force-app/main/default/objects/FieloCRUD__PageCustomButton__c/FieloCRUD__PageCustomButton__c.object-meta.xml
<CustomObject>
    <label>Page Custom Button</label>
    <nameField>
        <label>Custom Button Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Custom Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>