force-app/main/default/objects/FieloCRUD__PageCustomButton__c/fields/FieloCRUD__JSOnClick__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__JSOnClick__c</fullName>
    <inlineHelpText>Defines the javascript code that will be executed when clicking the button. If further code is needed, define functions on “JS Code” field that can be consumed by this field.</inlineHelpText>
    <label>JS OnClick</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>