force-app/main/default/objects/FieloCRUD__PageCustomButton__c/fields/FieloCRUD__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>