force-app/main/default/objects/FieloCRUD__PageCustomButton__c/fields/FieloCRUD__SiteName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SiteName__c</fullName>
    <inlineHelpText>Defines the label of the button that will be displayed in the site.</inlineHelpText>
    <label>Site Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>