force-app/main/default/objects/FieloCRUD__PageCustomButton__c/validationRules/FieloCRUD__PageCustomButton_NotForFormLayout.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCRUD__PageCustomButton_NotForFormLayout</fullName>
    <active>true</active>
    <errorConditionFormula>FieloCRUD__PageLayout__r.RecordType.DeveloperName = &#39;Form&#39;</errorConditionFormula>
    <errorMessage>You cannot create custom buttons for page layouts with Profile record type.</errorMessage>
</ValidationRule>